--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             >
           </li>
         </ul>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu">
+          <svg class="menu__icon" width="24" height="24">
+            <use href="./images/symbol-defs.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -428,8 +436,8 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="main-footer-container container">
+    <footer class="footer container">
+      <div class="main-footer-container">
         <div class="footer-container">
           <a class="logo-footer-link link" href="index.html"
             ><span class="logo-footer">Web</span>Studio</a
@@ -497,7 +505,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class=" backdrop is-open">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -575,6 +583,56 @@
           </div>
           <button type="submit" class="modal-submit">Send</button>
         </form>
+      </div>
+    </div>
+    <div class="menu-container js-menu-container visually-hidden" id="mobile-menu">
+      <button class="menu-toggle-close js-close-menu">
+        <svg class="menu__icon" width="40" height="40">
+          <use href="./images/icons.svg#icon-menu-close"></use>
+        </svg>
+      </button>
+      <div class="menu-wrap">
+        <ul class="mobile-menu">
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link link" href="./index.html">Студія</a>
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link link" href="./portfolio.html"
+              >Портфоліо</a
+            >
+          </li>
+          <li class="mobile-menu__item">
+            <a class="mobile-menu__link link" href="#">Контакти</a>
+          </li>
+        </ul>
+        <ul class="contact-menu">
+          <li class="contact-menu__item">
+            <a class="contact-menu__link--tel link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="contact-menu__item">
+            <a
+              class="contact-menu__link--mail link"
+              href=".mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="menu-soc-list">
+          <li class="menu-soc-list__item">
+            <a class="menu-soc-list__link link" href="#">Instagram</a>
+          </li>
+          <li class="menu-soc-list__item">
+            <a class="menu-soc-list__link link" href="#">Twitter</a>
+          </li>
+          <li class="menu-soc-list__item">
+            <a class="menu-soc-list__link link" href="#">Facebook</a>
+          </li>
+          <li class="menu-soc-list__item">
+            <a class="menu-soc-list__link link" href="#">LinkedIn</a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
