--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         </div>
       </div>
     </footer>
-    <div class=" backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -577,38 +577,37 @@
               value="true"
             />
             <label for="privacy" class="check-text"
-              >I accept the terms and conditions of the
-              <a href="" class="check-link">Privacy Policy</a></label
+              ><span> I accept the terms and conditions of the
+                <a href="" class="check-link">Privacy Policy</a></span> </label
             >
           </div>
           <button type="submit" class="modal-submit">Send</button>
         </form>
       </div>
     </div>
-    <div class="menu-container js-menu-container visually-hidden" id="mobile-menu">
-      <button class="menu-toggle-close js-close-menu">
+    <div class="menu-container is-hidden">
+      <button class="menu-toggle-close">
         <svg class="menu__icon" width="40" height="40">
-          <use href="./images/icons.svg#icon-menu-close"></use>
+          <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
       </button>
       <div class="menu-wrap">
         <ul class="mobile-menu">
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="./index.html">Студія</a>
+            <a class="mobile-menu__link link" href="./index.html">Studio</a>
           </li>
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="./portfolio.html"
-              >Портфоліо</a
+            <a class="mobile-menu__link link" href="./portfolio.html">Portfolio</a
             >
           </li>
           <li class="mobile-menu__item">
-            <a class="mobile-menu__link link" href="#">Контакти</a>
+            <a class="mobile-menu__link link" href="#">Contacts</a>
           </li>
         </ul>
         <ul class="contact-menu">
           <li class="contact-menu__item">
-            <a class="contact-menu__link--tel link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
+            <a class="contact-menu__link--tel link" href="tel:+110001111111"
+              >+11 000 111 11 11</a
             >
           </li>
           <li class="contact-menu__item">
@@ -619,18 +618,34 @@
             >
           </li>
         </ul>
-        <ul class="menu-soc-list">
-          <li class="menu-soc-list__item">
-            <a class="menu-soc-list__link link" href="#">Instagram</a>
+        <ul class="mobil-joing-list">
+          <li class="mobil-joing-item">
+            <a class="mobil-joing-link" href="">
+              <svg class="mobil-joing-icon" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
-          <li class="menu-soc-list__item">
-            <a class="menu-soc-list__link link" href="#">Twitter</a>
+          <li class="mobil-joing-item">
+            <a class="mobil-joing-link" href="">
+              <svg class="mobil-joing-icon" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
-          <li class="menu-soc-list__item">
-            <a class="menu-soc-list__link link" href="#">Facebook</a>
+          <li class="mobil-joing-item">
+            <a class="mobil-joing-link" href="">
+              <svg class="mobil-joing-icon" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
           </li>
-          <li class="menu-soc-list__item">
-            <a class="menu-soc-list__link link" href="#">LinkedIn</a>
+          <li class="mobil-joing-item">
+            <a class="mobil-joing-link" href="">
+              <svg class="mobil-joing-icon" width="20" height="20">
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
